cmd/rproxy/manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: rproxy
  name: rproxy
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: rproxy
