cmd/rproxy/manifest/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  labels:
    app: rproxy
  name: rproxy
spec:
  rules:
    - host: "%{ingress}"
      http:
        paths:
          - backend:
              serviceName: rproxy
              servicePort: 8080
            path: /
